--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </div>
   <div id="vx_leq_zero" style="display: none;">
     <p>That will work. So let c := sup{x ∈ [a,b] : sup V<sub>x</sub> ≤ 0}. Now we have to show that this is actually a real number, i.e. that the least upper bound actually exists. To do this, we have to show that the set {x ∈ [a,b] : sup V<sub>x</sub> ≤ 0} is <span class="clickable" onclick="toggle_show_sidebar('why_nonempty_and_bounded_set')">nonempty and bounded above</span>.</p>
+    <p>First let's show the set is nonempty</p>
     <ul>
       <li><span class="clickable"></span></li>
     </ul>
